Add coverage, comment with reports and disable pages publish by default

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,21 @@ jobs:
             trivy-scanning-results.txt
           retention-days: 30
 
+      - name: Comment coverage report on PR
+        if: github.event_name == 'pull_request'
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            ```
+            Trivy vulnerability scanning results:
+            $(cat trivy-scanning-results.txt)
+
+            License check results:
+            $(cat licenses.txt)
+            ```
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          comment_tag: execution
+
       - name: Publish Test Report
         uses: actions/upload-artifact@v3
         if: always()
@@ -109,7 +124,17 @@ jobs:
         run: pip install -r requirements-dev.txt
 
       - name: Run Tests
-        run: pytest -v -p no:warnings --junitxml=report.xml tests/
+        run: |
+          # run with coverage to not execute tests twice
+          coverage run -m pytest -v -p no:warnings --junitxml=report.xml tests/
+          coverage report
+          coverage xml
+
+      - name: Report coverage
+        uses: 5monkeys/cobertura-action@master
+        with:
+          path: report.xml
+          minimum_coverage: 0
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
