--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,8 +28,9 @@ jobs:
       - name: Build docs
         run: ./build_docs.sh
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+      # uncomment below to publish docs to github pages:
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./public
