Change name for workflows

--- a/.github/workflows/comment_pr.yml
+++ b/.github/workflows/comment_pr.yml
@@ -2,7 +2,7 @@ name: Reports
 
 on:
   workflow_run:
-    workflows: ["Continuous Integration"]
+    workflows: ["ci"]
     types:
       - completed
 jobs:
