--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,7 +2,7 @@ name: Coverage report
 
 on:
   workflow_run:
-    workflows: ["Continuous Integration"]
+    workflows: ["ci"]
     types:
       - completed
 jobs:
