Change name for workflows

--- a/.github/workflows/comment_pr.yml
+++ b/.github/workflows/comment_pr.yml
@@ -2,7 +2,8 @@ name: Reports
 
 on:
   workflow_run:
-    workflows: ["ci"]
+    workflows:
+      - Continuous Integration
     types:
       - completed
 jobs:
