--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,6 +1,9 @@
 name: Coverage report
 
 on:
+  push:
+    branches: [main, master]
+  pull_request:
   workflow_run:
     workflows:
         - Continuous Integration
