--- a/.github/workflows/comment_pr.yml
+++ b/.github/workflows/comment_pr.yml
@@ -1,15 +1,14 @@
 name: Reports
 
 on:
-  pull_request:
   workflow_run:
-    workflows:
-      - Continuous Integration
-      - Run linters
+    workflows: ["CI"]
     types:
       - completed
 jobs:
-  coverage:
+  comment_pr:
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.event == 'pull_request' }}
 
