--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,14 +5,13 @@ on:
     branches: [main, master]
   pull_request:
   workflow_run:
-    workflows:
-        - Continuous Integration
-        - ci
-        - Run tests
+    workflows: ["CI"]
     types:
       - completed
 jobs:
   coverage:
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.event == 'pull_request' }}
 
