--- a/.github/workflows/comment_pr.yml
+++ b/.github/workflows/comment_pr.yml
@@ -5,6 +5,9 @@ on:
     workflows: ["CI"]
     types:
       - completed
+    branches:
+      - master
+      - main
 jobs:
   comment_pr:
     permissions:
