--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,13 +1,11 @@
 name: Coverage report
 
 on:
-  push:
-    branches: [main, master]
-  pull_request:
   workflow_run:
     workflows: ["CI"]
     types:
       - completed
+    branches: [master, main]
 jobs:
   coverage:
     permissions:
