--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,7 +5,7 @@ on:
     workflows: ["CI"]
     types:
       - completed
-    branches: [master, main]
+    branches-ignore: [master, main]
 jobs:
   coverage:
     permissions:
