--- a/.github/workflows/comment_pr.yml
+++ b/.github/workflows/comment_pr.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["CI"]
     types:
-      - completed
+      - requested
     branches-ignore:
       - master
       - main
