--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["CI"]
     types:
-      - completed
+      - in_progress
     branches-ignore: [master, main]
 jobs:
   coverage:
