--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,8 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    permissions:
+      issues: write
     strategy:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
