--- a/.github/workflows/comment_pr.yml
+++ b/.github/workflows/comment_pr.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   comment_pr:
     permissions:
-      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
 
     steps:
