--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: CI
 
 on:
   push:
@@ -59,21 +59,6 @@ jobs:
             trivy-scanning-results.txt
           retention-days: 30
 
-      - name: Comment coverage report on PR
-        if: github.event_name == 'pull_request'
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          message: |
-            ```
-            Trivy vulnerability scanning results:
-            $(cat trivy-scanning-results.txt)
-
-            License check results:
-            $(cat licenses.txt)
-            ```
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          comment_tag: execution
-
       - name: Publish Test Report
         uses: actions/upload-artifact@v3
         if: always()
@@ -100,6 +85,8 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    permissions:
+      checks: write
     strategy:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
@@ -116,7 +103,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}-${{ hashFiles('**/setup.cfg') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
@@ -129,12 +116,6 @@ jobs:
           coverage run -m pytest -v -p no:warnings --junitxml=report.xml tests/
           coverage report
           coverage xml
-
-      - name: Report coverage
-        uses: 5monkeys/cobertura-action@master
-        with:
-          path: report.xml
-          minimum_coverage: 0
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
