--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,7 +25,7 @@ jobs:
           name: test-report
           path: test-report
       - name: Produce Coverage report
-        uses: ./
+        uses: 5monkeys/cobertura-action@v13
         with:
           path: test-report/report.xml
           minimum_coverage: 70
