--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,7 @@ jobs:
     permissions:
       checks: write
       pull-requests: write
+      contents: write
     strategy:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
@@ -146,8 +147,19 @@ jobs:
           path: report.xml
           retention-days: 10
 
+      - name: Produce Coverage report
+        uses: 5monkeys/cobertura-action@v13
+        continue-on-error: true
+        with:
+          path: coverage.xml
+          minimum_coverage: 70
+          fail_below_threshold: false
+
       - name: Produce the coverage report
         uses: insightsengineering/coverage-action@v2
+        continue-on-error: true
+        # you can add bage:
+        #![Code Coverage](https://raw.githubusercontent.com/$OWNER/$REPO/_xml_coverage_reports/data/main/badge.svg)
         with:
           # Path to the Cobertura XML report.
           path: coverage.xml
@@ -166,6 +178,8 @@ jobs:
           # Compare the current coverage to the coverage
           # determined on this branch.
           diff-branch: ${{ github.event.repository.default_branch }}
+          # make report togglable
+          togglable-report: true
           # This is where the coverage reports for the
           # `diff-branch` are stored.
           # Branch is created if it doesn't already exist'.
@@ -174,10 +188,4 @@ jobs:
           # coverage summary in the PR comment.
           coverage-summary-title: "Code Coverage Summary"
 
-      - name: Produce Coverage report
-        uses: 5monkeys/cobertura-action@v13
-        continue-on-error: true
-        with:
-          path: coverage.xml
-          minimum_coverage: 70
-          fail_below_threshold: false
+
