--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: "fs"
-          ignore-unfixed: false
+          ignore-unfixed: true
           format: "table"
           skip-dirs: docs/,notebooks/
-          severity: "CRITICAL,HIGH,MEDIUM,UKNOWN"
+          severity: "CRITICAL,HIGH,MEDIUM"
           output: "trivy-scanning-results.txt"
 
       - name: Create venv
@@ -84,6 +84,10 @@ jobs:
           name: packages
           path: dist/**
           retention-days: 10
+
+      - name: Format trivy message
+        run: |
+          echo "Trivy scanning results." >> trivy-scanning-results.txt
 
       - name: Add trivy report to PR
         uses: thollander/actions-comment-pull-request@v2
@@ -158,7 +162,7 @@ jobs:
       #     minimum_coverage: 70
       #     fail_below_threshold: false
 
-      # more complex version
+      # more complex version for better coverage reporting
       - name: Produce the coverage report
         uses: insightsengineering/coverage-action@v2
         continue-on-error: true
@@ -168,7 +172,7 @@ jobs:
           # Minimum total coverage, if you want to the
           # workflow to enforce it as a standard.
           # This has no effect if the `fail` arg is set to `false`.
-          threshold: 70
+          threshold: 60
           # Fail the workflow if the minimum code coverage
           # reuqirements are not satisfied.
           fail: false
