--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,11 +79,11 @@ jobs:
 
       - name: Publish Package
         uses: actions/upload-artifact@v3
-        if: always()
+        if: success()
         with:
           name: packages
           path: dist/**
-          retention-days: 10
+          retention-days: 5
 
       - name: Format trivy message
         run: |
@@ -95,7 +95,7 @@ jobs:
         continue-on-error: true
         if: ${{ github.event_name == 'pull_request' }}
         with:
-          filePath: trivy-scanning-results.txt
+          filePath: trivy.txt
           reactions: ""
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           comment_tag: trivy
