--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
     name: Run linters
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    permissions:
+      checks: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
@@ -34,7 +37,8 @@ jobs:
           scan-type: "fs"
           ignore-unfixed: true
           format: "table"
-          severity: "CRITICAL,HIGH"
+          skip-dirs: docs/,notebooks/
+          severity: "CRITICAL,HIGH,MEDIUM"
           output: "trivy-scanning-results.txt"
 
       - name: Create venv
@@ -75,11 +79,26 @@ jobs:
 
       - name: Publish Package
         uses: actions/upload-artifact@v3
-        if: always()
+        if: success()
         with:
           name: packages
           path: dist/**
-          retention-days: 10
+          retention-days: 5
+
+      - name: Format trivy message
+        run: |
+          echo "Trivy scanning results." >> trivy.txt
+          cat trivy-scanning-results.txt >> trivy.txt
+
+      - name: Add trivy report to PR
+        uses: thollander/actions-comment-pull-request@v2
+        continue-on-error: true
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          filePath: trivy.txt
+          reactions: ""
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          comment_tag: trivy
 
   tests:
     name: Run tests
@@ -87,6 +106,8 @@ jobs:
     timeout-minutes: 10
     permissions:
       checks: write
+      pull-requests: write
+      contents: write # required for advanced coverage reporting (to keep branch)
     strategy:
       fail-fast: false # do not stop all jobs if one fails
       matrix:
@@ -103,7 +124,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}-${{ hashFiles('**/setup.cfg') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}-${{ hashFiles('**/setup.cfg') }}-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
@@ -119,15 +140,59 @@ jobs:
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
+        continue-on-error: true
         if: always()
         with:
           report_paths: 'report.xml'
 
       - name: Publish Test Report
         uses: actions/upload-artifact@v3
+        continue-on-error: true
         if: always()
         with:
           name: test-report
           path: report.xml
           retention-days: 10
+
+      # simpler version
+      # - name: Produce Coverage report
+      #   uses: 5monkeys/cobertura-action@v13
+      #   continue-on-error: true
+      #   with:
+      #     path: coverage.xml
+      #     minimum_coverage: 70
+      #     fail_below_threshold: false
+
+      # more complex version for better coverage reporting
+      - name: Produce the coverage report
+        uses: insightsengineering/coverage-action@v2
+        continue-on-error: true
+        with:
+          # Path to the Cobertura XML report.
+          path: coverage.xml
+          # Minimum total coverage, if you want to the
+          # workflow to enforce it as a standard.
+          # This has no effect if the `fail` arg is set to `false`.
+          threshold: 60
+          # Fail the workflow if the minimum code coverage
+          # reuqirements are not satisfied.
+          fail: false
+          # Publish the rendered output as a PR comment
+          publish: true
+          # Create a coverage diff report.
+          diff: true
+          # Branch to diff against.
+          # Compare the current coverage to the coverage
+          # determined on this branch.
+          diff-branch: ${{ github.event.repository.default_branch }}
+          # make report togglable
+          togglable-report: true
+          # This is where the coverage reports for the
+          # `diff-branch` are stored.
+          # Branch is created if it doesn't already exist'.
+          diff-storage: _xml_coverage_reports
+          # A custom title that can be added to the code
+          # coverage summary in the PR comment.
+          coverage-summary-title: "Code Coverage Summary"
+
 
